[project]
name = "b23wrap"
version = "0.1.0"
description = "Local toolbox: wrap a URL into a Bilibili jump long-link and mint an official b23.tv short link"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "b23wrap contributors" }]
keywords = ["bilibili", "b23", "shortlink", "toolbox"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Utilities",
]
dependencies = []

[project.urls]
Disclaimer = "DISCLAIMER.md"
Documentation = "docs/mechanism.md"

[project.scripts]
b23wrap = "scripts.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []
py-modules = []
